--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -1,4 +1,5 @@
 /* Extra small devices (phones, 600px and down) */
+/* small devices (phones, 600px and down) */
 /* Extra small devices (phones, 600px and down) */
 /* Medium devices (landscape tablets, 768px and up) */
 .tps-tooltip {
@@ -53,6 +54,26 @@
     top: 14px;
     left: 100%;
     margin-left: -4px;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .tps-tooltip-text {
+    max-width: 300px;
+    width: -moz-fit-content;
+    width: -webkit-fit-content;
+    width: fit-content;
+    bottom: 125%;
+    right: -6px;
+    font-size: 15px;
+    line-height: 20px;
+    padding: 14px 16px 11px 12px;
+  }
+  .tps-tooltip-text:after {
+    content: url(../svg/arrow.svg);
+    position: absolute;
+    top: calc(100% - 6px);
+    left: calc(100% - 23px);
+    transform: rotate(90deg);
   }
 }
 @media only screen and (max-width: 570px) {
