add: Tahas code

--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -179,9 +179,11 @@
 }
 .tps-tooltip-text-top:after {
   content: url(../svg/arrow.svg);
+  width: 18px;
+  height: 20px;
   position: absolute;
   top: calc(100% - 5px);
-  left: calc(100% - 23px);
+  left: calc(100% - 26px);
   transform: rotate(90deg);
 }
 .tps-tooltip-text-top__active {
