--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -1,7 +1,3 @@
-/* Extra small devices (phones, 600px and down) */
-/* small devices (phones, 600px and down) */
-/* Extra small devices (phones, 600px and down) */
-/* Medium devices (landscape tablets, 768px and up) */
 .tps-tooltip {
   height: 18px;
   width: 18px;
@@ -33,10 +29,15 @@
   background-color: #0078c2;
   border-radius: 6px;
   color: #fff;
-  opacity: 0;
-  visibility: hidden;
   position: absolute;
-  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+  transform: scale(0);
+  -webkit-animation-name: fade-out;
+          animation-name: fade-out;
+  -webkit-animation-duration: 0.1s;
+          animation-duration: 0.1s;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   padding: 12px 11px 12px 17px;
   z-index: 1;
@@ -56,67 +57,7 @@
     margin-left: -4px;
   }
 }
-@media only screen and (max-width: 375px) {
-  .tps-tooltip-text {
-    max-width: 300px;
-    width: -moz-fit-content;
-    width: -webkit-fit-content;
-    width: fit-content;
-    bottom: 125%;
-    right: -6px;
-    font-size: 15px;
-    line-height: 20px;
-    padding: 14px 16px 11px 12px;
-  }
-  .tps-tooltip-text:after {
-    content: url(../svg/arrow.svg);
-    position: absolute;
-    top: calc(100% - 6px);
-    left: calc(100% - 23px);
-    transform: rotate(90deg);
-  }
-}
-@media only screen and (max-width: 570px) {
-  .tps-tooltip-text {
-    max-width: 300px;
-    width: -moz-fit-content;
-    width: -webkit-fit-content;
-    width: fit-content;
-    bottom: 125%;
-    right: -6px;
-    font-size: 15px;
-    line-height: 20px;
-    padding: 14px 16px 11px 12px;
-  }
-  .tps-tooltip-text:after {
-    content: url(../svg/arrow.svg);
-    position: absolute;
-    top: calc(100% - 6px);
-    left: calc(100% - 23px);
-    transform: rotate(90deg);
-  }
-}
-@media only screen and (max-width: 640px) {
-  .tps-tooltip-text {
-    max-width: 300px;
-    width: -moz-fit-content;
-    width: -webkit-fit-content;
-    width: fit-content;
-    bottom: 125%;
-    right: -6px;
-    font-size: 15px;
-    line-height: 20px;
-    padding: 14px 16px 11px 12px;
-  }
-  .tps-tooltip-text:after {
-    content: url(../svg/arrow.svg);
-    position: absolute;
-    top: calc(100% - 6px);
-    left: calc(100% - 23px);
-    transform: rotate(90deg);
-  }
-}
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1366px) {
   .tps-tooltip-text {
     max-width: 300px;
     width: -moz-fit-content;
@@ -137,8 +78,14 @@
   }
 }
 .tps-tooltip-text__active {
-  visibility: visible;
   opacity: 1;
+  transform: scale(1);
+  -webkit-animation-name: fade-in;
+          animation-name: fade-in;
+  -webkit-animation-duration: 0.1s;
+          animation-duration: 0.1s;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
 }
 .tps-tooltip-text__shrink {
   width: -moz-fit-content;
@@ -162,10 +109,15 @@
   background-color: #0078c2;
   border-radius: 6px;
   color: #fff;
-  opacity: 0;
-  visibility: hidden;
   position: absolute;
-  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+  transform: scale(0);
+  -webkit-animation-name: fade-out;
+          animation-name: fade-out;
+  -webkit-animation-duration: 0.1s;
+          animation-duration: 0.1s;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   padding: 12px 11px 12px 17px;
   z-index: 1;
@@ -187,8 +139,14 @@
   transform: rotate(90deg);
 }
 .tps-tooltip-text-top__active {
-  visibility: visible;
   opacity: 1;
+  transform: scale(1);
+  -webkit-animation-name: fade-in;
+          animation-name: fade-in;
+  -webkit-animation-duration: 0.1s;
+          animation-duration: 0.1s;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
 }
 .tps-tooltip-text-top__shrink {
   width: -moz-fit-content;
@@ -203,4 +161,46 @@
   top: calc(100% - 5px);
   left: calc(100% - 23px);
   transform: rotate(90deg);
+}
+
+@-webkit-keyframes fade-in {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fade-out {
+  from {
+    transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+@keyframes fade-out {
+  from {
+    transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: scale(0);
+    opacity: 0;
+  }
 }/*# sourceMappingURL=tooltip.css.map */
