--- a/src/scss/tooltip.scss
+++ b/src/scss/tooltip.scss
@@ -1,13 +1,3 @@
-/* Extra small devices (phones, 600px and down) */
-$ex-small-mobile: 375px;
-/* small devices (phones, 600px and down) */
-$small-mobile: 570px;
-/* Extra small devices (phones, 600px and down) */
-$mobile: 640px;
-
-/* Medium devices (landscape tablets, 768px and up) */
-$tablet: 768px;
-
 $desktop: 1366px;
 
 @mixin break-point($w) {
@@ -28,9 +18,7 @@ $desktop: 1366px;
   position: absolute;
   top: 0;
   right: 0;
-
   background-image: url(../svg/inactive.svg);
-
   @include break-point-desktop($desktop) {
     &:hover {
       background-image: url(../svg/hovered.svg);
@@ -57,10 +45,12 @@ $desktop: 1366px;
   background-color: #0078c2;
   border-radius: 6px;
   color: #fff;
-  opacity: 0;
-  visibility: hidden;
   position: absolute;
-  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+  transform: scale(0);
+  animation-name: fade-out;
+  animation-duration: 0.1s;
+  animation-direction: normal;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 25%);
   padding: 12px 11px 12px 17px;
   z-index: 1;
@@ -79,65 +69,8 @@ $desktop: 1366px;
     }
   }
 
-  //small mobile
-  @include break-point($ex-small-mobile) {
-    max-width: 300px;
-    width: -moz-fit-content;
-    width: fit-content;
-    bottom: 125%;
-    right: -6px;
-    font-size: 15px;
-    line-height: 20px;
-    padding: 14px 16px 11px 12px; // (top, right, bottom, and left).
-    &:after {
-      content: url(../svg/arrow.svg);
-      position: absolute;
-      top: calc(100% - 6px);
-      left: calc(100% - 23px);
-      transform: rotate(90deg);
-    }
-  }
-
-  //small mobile
-  @include break-point($small-mobile) {
-    max-width: 300px;
-    width: -moz-fit-content;
-    width: fit-content;
-    bottom: 125%;
-    right: -6px;
-    font-size: 15px;
-    line-height: 20px;
-    padding: 14px 16px 11px 12px; // (top, right, bottom, and left).
-    &:after {
-      content: url(../svg/arrow.svg);
-      position: absolute;
-      top: calc(100% - 6px);
-      left: calc(100% - 23px);
-      transform: rotate(90deg);
-    }
-  }
-
-  // mobile
-  @include break-point($mobile) {
-    max-width: 300px;
-    width: -moz-fit-content;
-    width: fit-content;
-    bottom: 125%;
-    right: -6px;
-    font-size: 15px;
-    line-height: 20px;
-    padding: 14px 16px 11px 12px; // (top, right, bottom, and left).
-    &:after {
-      content: url(../svg/arrow.svg);
-      position: absolute;
-      top: calc(100% - 6px);
-      left: calc(100% - 23px);
-      transform: rotate(90deg);
-    }
-  }
-
-  // tablet
-  @include break-point($tablet) {
+  // all below 1366
+  @include break-point($desktop) {
     max-width: 300px;
     width: -moz-fit-content;
     width: fit-content;
@@ -156,8 +89,11 @@ $desktop: 1366px;
   }
 
   &__active {
-    visibility: visible;
     opacity: 1;
+    transform: scale(1);
+    animation-name: fade-in;
+    animation-duration: 0.1s;
+    animation-direction: normal;
   }
 
   &__shrink {
@@ -182,10 +118,12 @@ $desktop: 1366px;
   background-color: #0078c2;
   border-radius: 6px;
   color: #fff;
-  opacity: 0;
-  visibility: hidden;
   position: absolute;
-  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+  transform: scale(0);
+  animation-name: fade-out;
+  animation-duration: 0.1s;
+  animation-direction: normal;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 25%);
   padding: 12px 11px 12px 17px;
   z-index: 1;
@@ -207,8 +145,11 @@ $desktop: 1366px;
   }
 
   &__active {
-    visibility: visible;
     opacity: 1;
+    transform: scale(1);
+    animation-name: fade-in;
+    animation-duration: 0.1s;
+    animation-direction: normal;
   }
 
   &__shrink {
@@ -223,5 +164,27 @@ $desktop: 1366px;
       left: calc(100% - 23px);
       transform: rotate(90deg);
     }
+  }
+}
+
+@keyframes fade-in {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: scale(0);
+    opacity: 0;
   }
 }
